solve info text overlapping problem

--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -62,7 +62,7 @@
     .escuchar__links{
       align-self: flex-end;
       height: 22vh;
-      gap: 8vw;
+      gap: 7vw;
       margin-bottom: 15vh;
     }
     .escuchar__links .left{
